--- a/.github/workflows/pr-workflow.yaml
+++ b/.github/workflows/pr-workflow.yaml
@@ -15,11 +15,11 @@ jobs:
           go-version: 1.21
 
       - name: Build
-        run: 
+        run:  |
           cd structure-and-tests
           go build -v ./...
 
       - name: Test and coverage
-        run: 
+        run: |
           cd structure-and-tests
           go test -coverage ./...
