Fixed command for code coverage

--- a/.github/workflows/pr-workflow.yaml
+++ b/.github/workflows/pr-workflow.yaml
@@ -22,4 +22,4 @@ jobs:
       - name: Test and coverage
         run: |
           cd structure-and-tests
-          go test -coverage ./...
+          go test -cover ./...
